tests/parser/should_fail/symmetry3.csp
assert 0 :[symmetric]: fn(x, y)
